# vector_search

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml
hw_1/: README.md  benchmark.py  distances.py  search.py  test_distances.py  visualization.py
