[project]
name = "vector-search"
version = "0.1.0"
description = "Vector search homework assignments"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pre-commit>=4.5.0",
]

[dependency-groups]
hw_1 = [
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "gensim>=4.3.0",
    "umap-learn>=0.5.0",
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",
]

dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
